@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: ArrayObject.test,v 1.2 2000/10/30 03:22:30 mdejong Exp $
+# RCS: @(#) $Id: ArrayObject.test,v 1.3 2000/12/22 09:47:15 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -584,7 +584,7 @@ test arrayObject-11.15 {initArray, error conditions} {
     list [catch {
 	set handle [java::new {int[][]} {5 -2}]
     } msg] $msg
-} {1 java.lang.NegativeArraySizeException}
+} {1 {negative array size -2}}
 
 
 # black box tests for get, set, getrange, and setrange ArrayObject
